--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "math-magicians-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "homepage": "https://marijanbrvar.github.io/math-magicians-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
